erDiagram
  BUSINESSES {
    integer id PK
    string name
    datetime created_at
    datetime updated_at
  }

  BUSINESS_CATEGORIES {
    integer id PK
    string name
    datetime created_at
    datetime updated_at
  }

  LICENSE_CATEGORIES {
    integer id PK
    string name
    string description
    datetime created_at
    datetime updated_at
  }

  ALCOHOL_LICENSES {
    integer id PK
    datetime expires_at
    datetime reported_at
    integer business_category_id FK
    integer license_category_id FK
    integer location_id FK
    integer business_id FK
    integer license_point_group_id FK
    datetime created_at
    datetime updated_at
  }

  LOCATIONS {
    integer id PK
    string address_1
    string address_2
    integer transformed_location_id FK
    datetime created_at
    datetime updated_at
  }

  TRANSFORMED_LOCATIONS {
    integer id PK
    string address_1
    string building_number
    float latitude
    float longtitude
    string address_kind
    string address_relation
    string unit_number
    string parcel_number
    string raw_address_2
    string parcel_region
    string parcel_cadastral_unit
    float osm_latitude
    float osm_longitude
    string osm_geocoding_strategy
    string osm_geocoding_precision
    string osm_geocoding_query
    datetime created_at
    datetime updated_at
  }

  GEOCODING_RESULTS {
    integer id PK
    integer transformed_location_id FK
    string source
    string strategy
    string query
    float latitude
    float longitude
    float confidence
    string precision
    boolean selected
    text raw_response
    datetime created_at
    datetime updated_at
  }

  ADDRESS_CORRECTIONS {
    integer id PK
    integer location_id FK
    integer source_location_id FK
    string corrected_address_1
    string corrected_address_2
    string source
    string method
    float confidence
    boolean selected
    text evidence
    datetime created_at
    datetime updated_at
  }

  LICENSE_POINT_GROUPS {
    integer id PK
    datetime reported_at
    float latitude
    float longitude
    string normalized_business_name
    string display_business_name
    text business_names
    text business_ids
    float similarity_floor
    datetime created_at
    datetime updated_at
  }

  STREETS {
    integer id PK
    string trait
    string name_1
    string name_2
    datetime created_at
    datetime updated_at
  }

  SIM_POPULATIONS {
    integer id PK
    date observed_on
    integer observed_on_code
    string sim_unit_code
    string sim_unit_name
    string district_code
    string district_name
    integer total
    datetime created_at
    datetime updated_at
  }

  BUSINESSES ||--o{ ALCOHOL_LICENSES : business_id
  BUSINESS_CATEGORIES ||--o{ ALCOHOL_LICENSES : business_category_id
  LICENSE_CATEGORIES ||--o{ ALCOHOL_LICENSES : license_category_id
  LOCATIONS ||--o{ ALCOHOL_LICENSES : location_id
  LICENSE_POINT_GROUPS ||--o{ ALCOHOL_LICENSES : license_point_group_id

  TRANSFORMED_LOCATIONS ||--o{ LOCATIONS : transformed_location_id
  TRANSFORMED_LOCATIONS ||--o{ GEOCODING_RESULTS : transformed_location_id

  LOCATIONS ||--o{ ADDRESS_CORRECTIONS : location_id
  LOCATIONS ||--o{ ADDRESS_CORRECTIONS : source_location_id
